--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "^6.26.0",
     "uuid": "^10.0.0"
   },
@@ -33,6 +34,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-static-copy": "^1.0.6"
   }
 }
