:wrench: firebaseプロジェクト設定でtsに向け

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "bira-host-st"
-  }
+    "default": "bira-host-st",
+    "ts": "bira-host-ts"
+  },
+  "targets": {},
+  "etags": {},
+  "dataconnectEmulatorConfig": {}
 }
