--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
     "default": "bira-host-st",
-    "ts": "bira-host-ts"
+    "ts": "bira-host-ts",
+    "st": "bira-host-st"
   },
   "targets": {},
   "etags": {},
